08_Networking/31-02_NetPol_Pod/solution/app01-fixed-netpol.yaml
# Exercise 31-02 v3.2.0
#
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: app01-netpol
  namespace: db-ns
spec:
  podSelector:
    matchLabels:
      tier: frontend
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
      - podSelector:
          matchLabels: 
            tier: backend
      ports:
        - protocol: TCP
          port: 5000 
  egress:
    - to:
      - podSelector:
          matchLabels: 
            tier: backend
      ports:
        - protocol: TCP
          port: 80
